WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135308
[CSS Shapes] shape-margin not respected when it extends beyond an explicitly set margin
https://bugs.webkit.org/show_bug.cgi?id=135308
Summary
[CSS Shapes] shape-margin not respected when it extends beyond an explicitly ...
Rebecca Hauck
Reported
2014-07-25 15:53:37 PDT
The attached tests has a 50 x 100 right float with a margin-left set to 10px and a shape-margin set to 20px and the parent element is 100px x 100px. A 50px Ahem character should not fit to flow no the left side of the float. Instead, it should be pushed beneath the float just as it would if the shape-outside was not defined. The reference file is just that - it is set up the same way, just without the shape-outside property (nor the red failure element).
Attachments
test case for bug
(1.94 KB, text/html)
2014-07-25 15:54 PDT
,
Rebecca Hauck
no flags
Details
reference file
(959 bytes, text/html)
2014-07-25 15:54 PDT
,
Rebecca Hauck
no flags
Details
new test file that fails when CSS Shapes isn't implemented or enabled (the other one didn't)
(2.08 KB, text/html)
2014-07-28 16:16 PDT
,
Rebecca Hauck
no flags
Details
new reference file
(738 bytes, text/html)
2014-07-28 16:16 PDT
,
Rebecca Hauck
no flags
Details
adding png
(17.87 KB, image/png)
2014-07-30 11:10 PDT
,
Rebecca Hauck
no flags
Details
Patch
(12.38 KB, patch)
2014-08-01 15:59 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Patch
(12.43 KB, patch)
2014-08-04 13:16 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Rebecca Hauck
Comment 1
2014-07-25 15:54:05 PDT
Created
attachment 235546
[details]
test case for bug
Rebecca Hauck
Comment 2
2014-07-25 15:54:26 PDT
Created
attachment 235547
[details]
reference file
Rebecca Hauck
Comment 3
2014-07-28 16:16:01 PDT
Created
attachment 235633
[details]
new test file that fails when CSS Shapes isn't implemented or enabled (the other one didn't)
Rebecca Hauck
Comment 4
2014-07-28 16:16:43 PDT
Created
attachment 235634
[details]
new reference file
Bem Jones-Bey
Comment 5
2014-07-30 11:03:27 PDT
(In reply to
comment #3
)
> Created an attachment (id=235633) [details] > new test file that fails when CSS Shapes isn't implemented or enabled (the other one didn't)
The test refers to support/square.png, which isn't included.
Rebecca Hauck
Comment 6
2014-07-30 11:10:43 PDT
Created
attachment 235752
[details]
adding png sorry about that - attached.
Bem Jones-Bey
Comment 7
2014-08-01 15:59:41 PDT
Created
attachment 235917
[details]
Patch
Bem Jones-Bey
Comment 8
2014-08-04 12:52:34 PDT
Comment on
attachment 235917
[details]
Patch I'm tweaking the test a bit to make it more robust.
Bem Jones-Bey
Comment 9
2014-08-04 13:16:57 PDT
Created
attachment 235983
[details]
Patch Made test more robust by switching to a left float so that the wrapped content hits up against the flat bottom of the shape margin, not the rounded corner.
WebKit Commit Bot
Comment 10
2014-08-04 15:17:35 PDT
Comment on
attachment 235983
[details]
Patch Clearing flags on attachment: 235983 Committed
r172010
: <
http://trac.webkit.org/changeset/172010
>
WebKit Commit Bot
Comment 11
2014-08-04 15:17:40 PDT
All reviewed patches have been landed. Closing bug.
Carlos Alberto Lopez Perez
Comment 12
2014-08-04 17:35:12 PDT
(In reply to
comment #10
)
> (From update of
attachment 235983
[details]
) > Clearing flags on attachment: 235983 > > Committed
r172010
: <
http://trac.webkit.org/changeset/172010
>
The test fast/shapes/shape-outside-floats/shape-outside-image-shape-margin.html fails on GTK. Reported here:
https://bugs.webkit.org/show_bug.cgi?id=135585
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug