[CSS Shapes] shape-margin not respected when it extends beyond an explicitly set margin https://bugs.webkit.org/show_bug.cgi?id=135308

Reviewed by Dean Jackson.

Source/WebCore:
When a zero height line is supplied and the image shape extends into
the margin box (only possible when a shape-margin is supplied), then
only an empty interval was being returned. This patch makes it
properly return the interval for the line in question.

Test: fast/shapes/shape-outside-floats/shape-outside-image-shape-margin.html

* rendering/shapes/RasterShape.cpp:
(WebCore::RasterShape::getExcludedIntervals): Handle the zero height
line case.

LayoutTests:
Test case based on the one supplied by Rebecca Hauck in the bug
report.

* fast/shapes/resources/square.png: Added.
* fast/shapes/shape-outside-floats/shape-outside-image-shape-margin-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-image-shape-margin.html: Added.


Canonical link: https://commits.webkit.org/153450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172010 268f45cc-cd09-0410-ab3c-d52691b4dbfc